Allow template loaders to be registered and de-registered per plugin